<resources>
    <string name="app_name">AdhiPradanaTest</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="email_hint">Email</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="log_in_hint">Log in</string>
    <string name="sign_in_with_google_hint">Sign in with Google</string>
    <string name="sign_in_with_apple_hint">Sign in with Apple</string>
    <string name="welcome_back_text">Welcome back</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="item_big_add_description">add to basket</string>
    <string name="item_big_favorite_description">favorite</string>
    <string name="seller_avatar">seller avatar</string>
    <string name="search_hint">What are you looking for ?</string>
    <string name="location_text">location</string>
    <string name="view_all">View all</string>
    <string name="latest_deals">Latest deals</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="brands">Brands</string>

</resources>